# bob

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Bob/Http/: Deserializer.cpp  Deserializer.hpp  Enums.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
Bob/Server/: BobServer.cpp  BobServer.hpp
test/: script.sh
test/bob/: main.cpp
